--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
@@ -30,6 +31,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "5.6.0"
+    "eslint": "5.6.0",
+    "redux-devtools-extension": "^2.13.7"
   }
 }
